crates/compiler/tests/parse_errors/port_in_normal.elm
module Main exposing (..)

port foo : Int
